--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -741,107 +741,107 @@ stories:
   domain: http://www.willistonherald.com/
   link: https://www.willistonherald.com/national/entertainment/susan-boyle-has-been-single-for-too-long-to-think/image_b92e109a-157b-5d3b-9593-b1b4e26eff40.html
 images:
-- name: white-house-lawn-white-house-window-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-far-away.jpg
-- name: oldcabin-oldcabin-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-asteroids.jpg
-- name: oldhouse-granaryfield-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-far-away.jpg
-- name: old-granary-field-granaryfield-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-hot-spicy.jpg
-- name: white-house-lawn-white-house-lawn-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-ww2-color.jpg
-- name: amusement-park-amusement-park-2-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-satan-red.jpg
-- name: berlinwall-DSC-0084-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-oily-mcoilface.jpg
-- name: old-granary-field-oldhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-electricity.jpg
-- name: death-valley-death-valley-national-park-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-neo-instinct.jpg
-- name: aws-s3-stories-capital-battle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capital-battle-blue-circuit.jpg
+- name: beach-rocks-beach-rocks-currents-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-atari-asteroids.jpg
+- name: nazi-invasion-working-on-railroad-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-working-on-railroad-1.jpg
+- name: bf-skinner-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-adam-smith-edinburgh.jpg
+- name: copper-circuit-IMG_7169.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7169.jpg
+- name: old-gas-pumps-oldgaspumps-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-dali.jpg
 - name: store-on-corner-oldcabin-dark-dali.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-dali.jpg
-- name: castle-wall-DSC-0067-attack-planes.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-attack-planes.JPG
-- name: copper-circuit-blechlety-old-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-blechlety-old-racks.jpg
-- name: border-crossing-bordercrossing-monet-one.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-monet-one.png
-- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
-- name: status-berlin-status-berlin-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-mucha-mult.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crafty-painting.jpg
-- name: copper-circuit-fire-truck-pulling-out-of-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fire-truck-pulling-out-of-station.jpg
-- name: docks-docks-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-mucha-mult.jpg
-- name: power-lines-power-lines-empty-space-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-propaganda-leaflets.jpg
-- name: power-lines-power-lines-empty-space-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-graham-sutherland.jpg
-- name: mediterranean-mediterranean-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dark-soul.jpg
-- name: stalin-time-train-tracks-bending.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-tracks-bending.jpg
-- name: adam-smith-adam-smith-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-emily-carr.jpg
-- name: copper-circuit-underground-subway_36342747010_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-underground-subway_36342747010_o.jpg
-- name: yosemite-yosemite-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-cinnamon-rolls.jpg
-- name: stories-36698086536-f214416faf-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36698086536-f214416faf-z.jpg
-- name: windowmountain-window-mountain-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-missle.jpg
-- name: containership-containership-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sand-paper.jpg
-- name: dc-statue-dcstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-brush.jpg
-- name: ellis-island-ellis-island-room-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-atari-asteroids.jpg
-- name: beach-rocks-beach-rocks-currents-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sand-paper.jpg
-- name: old-gas-pumps-oldgaspumps-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crabapple.jpg
-- name: hollywood-building-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-jap-wav-pr.jpg
-- name: old-granary-field-granaryfield-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-circuit.jpg
-- name: braceros-domingo-ulloa-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-construction-crane-city.jpg
-- name: gears-4882162452-fa3126b38d-b-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-alberto-giacometti.jpg
-- name: fence-gorilla-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-dark-dali.jpg
-- name: dragon-desert-desert-dragon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-creativity.jpg
-- name: mistywoods-babyfoot-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-yellow-collage.jpg
-- name: white-house-lawn-white-house-window-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-emily-carr.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-far-away.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-far-away.JPG
-- name: stories-36349148770-1a9d2692b2-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349148770-1a9d2692b2-z.jpg
-- name: bf-skinner-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-broken-piano-street.jpg
-- name: catacombs-catacombs-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-asteroids.jpg
-- name: nazi-invasion-shipping-container-yard-police-boat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-shipping-container-yard-police-boat.jpg
-- name: status-berlin-status-berlin-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dali-three.jpg
-- name: abandonedbuildings_post_modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_post_modern.jpg
-- name: adam-smith-adam-smith-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
-- name: paris-paris-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-color.jpg
-- name: store-on-corner-store-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gred-mash.jpg
+- name: miamibeach-miamibeach-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-circuit.jpg
+- name: old-house-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
+- name: docks-docks-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-color.jpg
+- name: oldsmallboat-oldsmallboat-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crafty-painting.jpg
+- name: hollywood-building-hollywood-building-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-neo-instinct.jpg
+- name: stories-castle-wall-circuits.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-wall-circuits.JPG
+- name: bf-skinner-city-skyline-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-city-skyline-bright.jpg
+- name: oldhotel-oldhotel-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-green-zuma.jpg
+- name: bf-skinner-old-man-crossing-border.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-man-crossing-border.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
+- name: old-house-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-aqua.jpg
+- name: 35562068104_fa20c57575-scream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-scream.jpg
+- name: oldhousecars-house-old-cars-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colorful-blocks.jpg
+- name: razorwire-DSC-0080-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purp-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-granite.jpg
+- name: downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
+- name: miamibeach-miamibeach-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-gred-mash.jpg
+- name: stories-new-32-119-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-32-119-800-500-0-max-0--1--1.jpg
+- name: school-clouds-church-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-granite.jpg
+- name: white-house-lawn-white-house-window-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-yellow-collage.jpg
+- name: oldbarn-oldbarn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smoking-cigarette.jpg
+- name: razorcliff-razorcliff-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-far-away.jpg
+- name: store-on-corner-oldcabin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-soul.jpg
+- name: border-crossing-bordercrossing-light-dali.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-light-dali.png
+- name: white-house-lawn-white-house-window-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-graham-sutherland.jpg
+- name: supreme-court-supremecourt-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-kand-two.jpg
+- name: rockingchair-face-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-alien-goggles.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-hot-spicy.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-hot-spicy.png
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
+- name: bf-skinner-soliders-fighting-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-soliders-fighting-statue.jpg
+- name: adam-smith-adam-smith-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-collage.jpg
+- name: stories-fence-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-ww2-dresden.jpg
+- name: statue-of-liberty-front-view-statueofliberty-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-clean-view.jpg
+- name: mistywoods-babyfoot-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-pablo-blue.jpg
+- name: window-window-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-electricity.jpg
+- name: mosaic-face-mosaic-face-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-really-hot.jpg
+- name: sand-hand-sand-hand-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alberto-giacometti.jpg
+- name: copper-circuit-dragon-turning-head.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dragon-turning-head.jpg
+- name: oldhouse-oldhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-umberto-bocc.jpg
+- name: christianity-christianity-under-construction-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-constitution.jpg
+- name: mistywoods-babyfoot-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dry-skin.jpg
+- name: powerlines-power-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-alberto-giacometti.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
+- name: crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
 ---
 Tornado A Lesson On Whats Important.&nbsp;Cops, Kids Go Shopping For Christmas.&nbsp;China, South Korea, Japan Meet Over Trade, Regional Disputes.&nbsp;OnPoint Community Credit Union Responds To Sisters Kiwanis Food Bank Funding Shortage.&nbsp;James Reese Sunday Leftovers.&nbsp;Schools Cruel With Lunch Money Threat.&nbsp;East Bernstadt Man Dies Following Shooting Sunday; Four Arrested.&nbsp;Lakers Show Inexperience At Caldwell.&nbsp;
